<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:background="@color/iseo_bkgnd"
    tools:context=".ui.activities.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/topBarTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/iseo_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/topSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fafafa"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/username_textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_input_rounded_box"
        android:drawableTint="#A1A1A1"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSeparator" />

    <EditText
        android:id="@+id/password_textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_input_rounded_box"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:drawableTint="#A1A1A1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textEdit" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_selector"
        android:text="@string/accedi"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textEdit" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded_selector"
        android:text="@string/scarica_aggiornamento"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:visibility="invisible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black75"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/white"
            android:progressTintMode="add" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
